[gd_scene load_steps=16 format=3 uid="uid://btvusbx781b30"]

[ext_resource type="Theme" uid="uid://cbra74d4qris6" path="res://assets/theme/default.tres" id="1_b14tj"]
[ext_resource type="FontFile" uid="uid://bqeanl0rvmlbo" path="res://assets/fonts/SourceHanSerif-VF.otf.ttc" id="2_512c4"]
[ext_resource type="Script" path="res://pages/inspiration/memo_show_panel_container.gd" id="2_vg4rp"]
[ext_resource type="Script" path="res://pages/inspiration/inspiration_memo_resource.gd" id="3_7vaj3"]
[ext_resource type="Texture2D" uid="uid://d1rxony85lv5x" path="res://assets/icons/三个点.png" id="3_kda6i"]
[ext_resource type="Texture2D" uid="uid://bhtw8jfbip3bx" path="res://assets/icons/引用链接.png" id="6_3pihi"]
[ext_resource type="Texture2D" uid="uid://cbu1w70tjhaut" path="res://assets/icons/被引用链接.png" id="7_h35hc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oef1n"]
content_margin_left = 15.0
content_margin_top = 10.0
content_margin_right = 15.0
content_margin_bottom = 15.0
bg_color = Color(1, 1, 1, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.733333, 0.733333, 0.733333, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="Resource" id="Resource_gwdoe"]
script = ExtResource("3_7vaj3")
id = "1"
content = "test"
book_id = "NULL"
tag = "4e184aec-5173-4c70-8827-32d9e5607762"
date = {}
linkout = Array[String]([])
linkin = Array[String]([])
file_path = Array[String]([])

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_uxnhb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6chvx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1wjru"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_f7tp6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bitq4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yahqh"]
content_margin_left = 2.0
content_margin_top = 0.0
content_margin_right = 10.0
content_margin_bottom = 0.0
bg_color = Color(0.933333, 0.952941, 0.996078, 1)

[node name="memo_show_panel_container" type="PanelContainer"]
size_flags_horizontal = 3
size_flags_vertical = 0
theme = ExtResource("1_b14tj")
theme_override_styles/panel = SubResource("StyleBoxFlat_oef1n")
script = ExtResource("2_vg4rp")
memoEn = SubResource("Resource_gwdoe")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="inspiration_date" type="Label" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("1_b14tj")
theme_override_colors/font_color = Color(0.882353, 0.831373, 0.741176, 1)
theme_override_font_sizes/font_size = 30
text = "2024-3-20 14:12:53"

[node name="inspiration_inspiration_detail_button" type="MenuButton" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 37)
layout_mode = 2
size_flags_horizontal = 10
tooltip_text = "点击后修改、删除或复制链接"
theme = ExtResource("1_b14tj")
theme_override_fonts/font = ExtResource("2_512c4")
theme_override_font_sizes/font_size = 15
theme_override_styles/normal = SubResource("StyleBoxEmpty_uxnhb")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_6chvx")
theme_override_styles/hover = SubResource("StyleBoxEmpty_1wjru")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_f7tp6")
theme_override_styles/focus = SubResource("StyleBoxEmpty_bitq4")
item_count = 3
popup/item_0/text = "编辑"
popup/item_0/id = 0
popup/item_1/text = "删除"
popup/item_1/id = 1
popup/item_2/text = "复制链接"
popup/item_2/id = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer2/inspiration_inspiration_detail_button"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_kda6i")
expand_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="inspiration_tag_label" type="Label" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("1_b14tj")
theme_override_colors/font_color = Color(0.376471, 0.541176, 0.968627, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_yahqh")
text = "# 读书/她对此感到厌烦"

[node name="memo_content" type="RichTextLabel" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_512c4")
theme_override_font_sizes/normal_font_size = 35
bbcode_enabled = true
text = "并不是只有仁慈才会产生与敌人共情，恐惧也会。"
fit_content = true

[node name="memo_related_file_container" type="HBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 2
theme_override_constants/separation = 17

[node name="inspiration_linkout_container" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="link_out_button" type="Button" parent="VBoxContainer/inspiration_linkout_container"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(43, 43)
layout_mode = 2
size_flags_vertical = 0
tooltip_text = "点击后可以看见所有被这个memo链接的memo"
theme = ExtResource("1_b14tj")

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/inspiration_linkout_container/link_out_button"]
custom_minimum_size = Vector2(43, 43)
layout_mode = 1
offset_right = 43.0
offset_bottom = 43.0
texture = ExtResource("6_3pihi")
expand_mode = 1

[node name="link_out_vbox_container" type="VBoxContainer" parent="VBoxContainer/inspiration_linkout_container"]
unique_name_in_owner = true
layout_mode = 2

[node name="inspiration_linkin_container" type="HBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="link_in_button" type="Button" parent="VBoxContainer/inspiration_linkin_container"]
unique_name_in_owner = true
custom_minimum_size = Vector2(43, 43)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
tooltip_text = "点击后可以看见所有链接到这个memo的memo"
theme = ExtResource("1_b14tj")

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/inspiration_linkin_container/link_in_button"]
custom_minimum_size = Vector2(43, 43)
layout_mode = 1
offset_right = 43.0
offset_bottom = 43.0
texture = ExtResource("7_h35hc")
expand_mode = 1

[node name="link_in_show_button" type="Button" parent="VBoxContainer/inspiration_linkin_container"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("1_b14tj")
theme_override_colors/font_color = Color(0.733333, 0.733333, 0.733333, 1)
theme_override_colors/font_pressed_color = Color(0.976471, 0.862745, 0.360784, 1)
theme_override_colors/font_hover_color = Color(0.976471, 0.862745, 0.360784, 1)
theme_override_colors/font_focus_color = Color(0.733333, 0.733333, 0.733333, 1)
theme_override_colors/font_hover_pressed_color = Color(0.733333, 0.733333, 0.733333, 1)
theme_override_colors/font_disabled_color = Color(0.733333, 0.733333, 0.733333, 1)
theme_override_colors/font_outline_color = Color(0.733333, 0.733333, 0.733333, 1)
theme_override_font_sizes/font_size = 30
text = "看一下字体"

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="pressed" from="VBoxContainer/inspiration_linkout_container/link_out_button" to="." method="_on_link_out_button_pressed"]
[connection signal="pressed" from="VBoxContainer/inspiration_linkin_container/link_in_button" to="." method="_on_link_in_button_pressed"]
[connection signal="pressed" from="VBoxContainer/inspiration_linkin_container/link_in_show_button" to="." method="_on_link_in_show_button_pressed"]
